[package]
name = "cspc"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@gmx.com>"]
description = "A C-style policy language for SELinux"

[workspace]
members = [
    "sexp_cmp",
    "libsecsp_syntax",
]

[profile.release]
debug = true
lto = true
panic = 'abort'

[dependencies]
secsp_syntax = { path = "libsecsp_syntax" }
symbolic_expressions = "~4.1.9"
clap = "~2.26.0"
