[package]
name = "secsp_syntax"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@gmx.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
logos = "0.9.7"
codespan = "0.1.2"
codespan-reporting = "0.1.3"
pretty_assertions = "0.5.1"
string-interner = "0.6.3"
parking_lot = "0.7.1"
rowan = "0.1.3"
smol_str = "0.1.8"
text_unit = "0.1.5"
drop_bomb = "0.1.4"
regex = "1.1.0"