[package]
name = "secsp_language_server"
version = "0.1.0"
authors = ["Gary Tierney <gary.tierney@gmx.com>"]

[dependencies]
codespan-lsp = "0.1.0"
gen_lsp_server = "0.1.0"
rayon = "1.0.2"
threadpool = "1.7.1"
relative-path = "0.4.0"
failure = "0.1.2"
failure_derive = "0.1.2"
serde_json = "1.0.24"
serde = "1.0.83"
drop_bomb = "0.1.0"
crossbeam-channel = "0.2.4"
flexi_logger = "0.10.0"
log = "0.4.3"
url_serde = "0.2.0"
languageserver-types = "0.53.1"
walkdir = "2.2.7"
im = "12.0.0"
cargo_metadata = "0.6.0"
text_unit = { version = "0.1.2", features = ["serde"] }
smol_str = { version = "0.1.5", features = ["serde"] }
rustc-hash = "1.0"
parking_lot = "0.7.0"
