[package]
name = "csp-editor"
version = "0.1.0"
authors = ["rust-analyzer developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
rustc-hash = "1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde-wasm-bindgen = "0.1"
secsp_analysis = { path = "../../../packages/libsecsp-analysis" }
wasm-logger = "0.1.5"

[workspace]

